<resources>
    <string name="app_name">BelotCounter</string>

    <string name="continueBtn">Продължи</string>

    /*Games*/
    <string name="belot">БЕЛОТ</string>
    <string name="belotBtn">Белот</string>
    <string name="santace">САНТАСЕ</string>
    <string name="santaceBtn">Сантасе</string>
    <string name="hilqda">ХИЛЯДА</string>
    <string name="hilqdaBtn">Хиляда</string>

    /*Party name*/
    <string name="team">Отбор</string>
    <string name="player">Играч</string>

    /*Toasts*/
    <string name="toast_names_changed">Имената бяха редактирани</string>
    <string name="toast_game_deleted">Играта бе изтрита</string>
    <string name="toast_all_zero">Моля добавете точки</string>
    <string name="toast_invalid_inside">Ако е имало вътрене, един от отборите трябва да има 0 точки</string>

    /*Main*/
    <string name="last_game">Последна игра:</string>
    <string name="last_games">По-стари игри:</string>
    <string name="no_games">Няма предишни игри.</string>
    <string name="vs">vs</string>

    /*Имена на отбори*/
    <string name="teamsTitles">Имена на отбори</string>
    <string name="team1">Отбор 1:</string>
    <string name="team2">Отбор 2:</string>
    <string name="team1sug">Ягодки с крачета</string>
    <string name="team2sug">Анансчета с ръчички</string>
    <string name="team1hint">Име на отбор 1</string>
    <string name="team2hint">Име на отбор 2</string>

    /*Въвеждане на точки*/
    <string name="addPointsTitle">Въвеждане на точки</string>
    <string name="zero">0</string>
    <string name="gameWas">Играта беше </string>
    <string name="insiding">вътре</string>
    <string name="kapo">капо</string>

    /*Изтриване*/
    <string name="ptsDelTitle">Изтриване на точки</string>
    <string name="gameDelTitle">Изтриване на игра</string>
    <string name="youSureDelPts">Сигурни ли сте, че искате да изтриете този ред?</string>
    <string name="youSureDelGame">Сигурни ли сте, че искате да изтриете тази игра?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>

    /*В игра*/
    <string name="addPoints">Добави точки</string>
    <string name="edit">Редактирай</string>
    <string name="delete">Изтрий</string>

    /Краен екран*/
    <string name="title_activity_win_screen">WinScreen</string>
    <string name="game_over">Играта приключи</string>
    <string name="winner_is">Победителят е</string>
    <string name="to_menu">Към менюто</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="title_activity_playing">Игра</string>
    <string name="tab_text_1">Резултати</string>
    <string name="tab_text_2">Графика</string>
    <string name="tab_text_3">Статистика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>