<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/etAddPtsTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/team2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBehind1" />

    <View
        android:id="@+id/viewBehind1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.5"
        android:background="@color/myDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddPtsTeam1" />

    <TextView
        android:id="@+id/etAddPtsTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/team1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/etTeam1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:fontFamily="@font/cuprum"
        android:hint="@string/team1hint"
        android:inputType="text"
        android:maxLength="20"
        android:text="@string/team1sug"
        app:layout_constraintBottom_toBottomOf="@+id/viewBehind1"
        app:layout_constraintEnd_toEndOf="@+id/viewBehind1"
        app:layout_constraintStart_toStartOf="@+id/viewBehind1"
        app:layout_constraintTop_toTopOf="@+id/viewBehind1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/teamsTitles"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewBehind2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.5"
        android:background="@color/myDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddPtsTeam2" />

    <EditText
        android:id="@+id/etTeam2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:fontFamily="@font/cuprum"
        android:hint="@string/team2hint"
        android:inputType="text"
        android:maxLength="20"
        android:text="@string/team2sug"
        app:layout_constraintBottom_toBottomOf="@+id/viewBehind2"
        app:layout_constraintEnd_toEndOf="@+id/viewBehind2"
        app:layout_constraintStart_toStartOf="@+id/viewBehind2"
        app:layout_constraintTop_toTopOf="@+id/viewBehind2" />

    <Button
        android:id="@+id/btnDelYes"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/myDark"
        android:fontFamily="@font/cuprum"
        android:text="@string/continueBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBehind2"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />

</androidx.constraintlayout.widget.ConstraintLayout>