<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    tools:context=".MainActivity">


    <View
        android:id="@+id/viewBehind1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.5"
        android:background="@color/myDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/etAddPtsTeam1"
        app:layout_constraintTop_toBottomOf="@+id/etAddPtsTeam1" />

    <TextView
        android:id="@+id/etAddPtsTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/team1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/etTeam1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:fontFamily="@font/dosis_bold"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewBehind1"
        app:layout_constraintEnd_toEndOf="@+id/viewBehind1"
        app:layout_constraintStart_toStartOf="@+id/viewBehind1"
        app:layout_constraintTop_toTopOf="@+id/viewBehind1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/addPointsTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etAddPtsTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/team2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBehind1" />

    <View
        android:id="@+id/viewBehind2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.5"
        android:background="@color/myDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etAddPtsTeam2"
        app:layout_constraintTop_toBottomOf="@+id/etAddPtsTeam2" />

    <EditText
        android:id="@+id/etTeam2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:fontFamily="@font/dosis_bold"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewBehind2"
        app:layout_constraintEnd_toEndOf="@+id/viewBehind2"
        app:layout_constraintStart_toStartOf="@+id/viewBehind2"
        app:layout_constraintTop_toTopOf="@+id/viewBehind2" />

    <TextView
        android:id="@+id/etAddPtsTeam3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cuprum"
        android:text="@string/team3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBehind2" />

    <View
        android:id="@+id/viewBehind3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.5"
        android:background="@color/myDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etAddPtsTeam3"
        app:layout_constraintTop_toBottomOf="@+id/etAddPtsTeam3" />

    <EditText
        android:id="@+id/etTeam3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:fontFamily="@font/dosis_bold"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewBehind3"
        app:layout_constraintEnd_toEndOf="@+id/viewBehind3"
        app:layout_constraintStart_toStartOf="@+id/viewBehind3"
        app:layout_constraintTop_toTopOf="@+id/viewBehind3" />

    <Button
        android:id="@+id/btnDelYes"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/myDark"
        android:fontFamily="@font/cuprum"
        android:text="@string/continueBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBelot"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />

    <LinearLayout
        android:id="@+id/llBelot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBehind3">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cuprum"
            android:text="@string/gameWas" />

        <CheckBox
            android:id="@+id/cbKapo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cuprum"
            android:text="@string/kapo" />

        <CheckBox
            android:id="@+id/cbInside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cuprum"
            android:text="@string/insiding" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>