<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clLastGame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/old_games_background">

    <TextView
        android:id="@+id/tvTeam1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/cuprum"
        android:gravity="center"
        android:text="Отбор 1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPts1"
        app:layout_constraintStart_toStartOf="@+id/tvPts1"
        app:layout_constraintTop_toBottomOf="@+id/tvPts1" />

    <TextView
        android:id="@+id/tvTeam2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/cuprum"
        android:gravity="center"
        android:text="Отбор 2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPts2"
        app:layout_constraintStart_toEndOf="@+id/tvPts1"
        app:layout_constraintTop_toTopOf="@+id/tvTeam1" />

    <TextView
        android:id="@+id/tvPts1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dosis_bold"
        android:gravity="center"
        android:text="109"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/tvPts2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPts2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/dosis_bold"
        android:gravity="center"
        android:text="109"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvPts1"
        app:layout_constraintTop_toTopOf="@+id/tvPts1" />

    <View
        android:id="@+id/line1"
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:background="@color/belot1"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tvPts1"
        app:layout_constraintStart_toStartOf="@+id/tvPts1"
        app:layout_constraintTop_toBottomOf="@+id/tvPts1" />

    <View
        android:id="@+id/line2"
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:background="@color/belot1"
        app:layout_constraintEnd_toEndOf="@+id/tvPts2"
        app:layout_constraintStart_toStartOf="@+id/tvPts2"
        app:layout_constraintTop_toBottomOf="@+id/tvPts1" />

    <TextView
        android:id="@+id/tvVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-24dp"
        android:fontFamily="@font/dosis_bold"
        android:text="@string/vs"
        android:textColor="@color/belot1"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/line1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelGame"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/continueBtn"
        android:src="@drawable/hiks"
        app:backgroundTint="@color/myLight"
        app:fabCustomSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="20dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:tint="@color/accent2" />

    <View
        android:id="@+id/viewEdge"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:background="@drawable/edge_belot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:fontFamily="@font/cuprum"
        android:rotation="-90"
        android:text="@string/belot"
        android:textColor="@color/belot3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>